# connectedhomeip

build_overrides/: efr32_sdk.gni  si_sdk.gni
examples/build_overrides/: chip.gni  efr32_sdk.gni
examples/lighting-app/efr32/: BUILD.gn  BUILD_.gn
examples/lighting-app/efr32/src/: main.cpp  system_RS1xxxx_keil.c
examples/lighting-app/silabs/efr32/: BUILD.gn
examples/lighting-app/silabs/efr32/src/: AppTask.cpp
examples/lighting-app/silabs/si917/: BUILD.gn  args.gni  build_for_wifi_args.gni
examples/lighting-app/silabs/si917/src/: main.cpp
examples/platform/efr32/: FreeRTOSConfig.h  LEDWidget.cpp  efr32_utils.cpp  init_efrPlatform.cpp  uart.cpp
examples/platform/efr32/display/: lcd.cpp
examples/platform/efr32/ldscripts/: efr32mg12 - Copy.ld  efr32mg12.ld
examples/platform/silabs/efr32/: uart.cpp
examples/platform/silabs/si917/: BUILD.gn  BaseApplication.cpp  FreeRTOSConfig.h  init_efrPlatform.cpp  matter_config.cpp
examples/platform/silabs/si917/display/: lcd.cpp
examples/platform/silabs/si917/ldscripts/: efr32mg12.ld
src/crypto/: CHIPCryptoPALmbedTLS.cpp
src/include/platform/internal/: BLEManager.h
src/lwip/: BUILD.gn
src/platform/: BUILD.gn  device.gni
src/platform/EFR32/: BLEManagerImpl.h  BUILD.gn  CHIPMem-Platform.cpp  ConfigurationManagerImpl.cpp  Logging.cpp  OTAImageProcessorImpl.cpp  args.gni  efr32-chip-mbedtls-config.h  efr32-mbedtls-psa-crypto-config.h  freertos_bluetooth.c  wifi_args.gni
src/platform/Silabs/EFR32/: EFR32Config.cpp  args.gni
src/platform/Silabs/SI917/: BUILD.gn  BlePlatformConfig.h  KeyValueStoreManagerImpl.cpp  args.gni  si917-chip-mbedtls-config.h  wifi_args.gni
src/platform/Silabs/Si917/: wifi_args.gni
